<resources>
    <string name="app_name">FourTen</string>
    //habit_make
    <string name="goal">달성목표</string>
    <string name="edit_goal_name">달성목표를 입력해주세요.</string>
    <string name="goal_period">목표일수</string>
    <string name="three_week">3주</string>
    <string name="one_month">1달</string>
    <string name="two_month">2달</string>
    <string name="three_month">3달</string>
    <string name="goal_week">달성할 요일</string>
    <string name="monday">월</string>
    <string name="tuesday">화</string>
    <string name="wednesday">수</string>
    <string name="thursday">목</string>
    <string name="friday">금</string>
    <string name="saturday">토</string>
    <string name="sunday">일</string>
    <string name="everyday">매일</string>
    <string name="notion_for_choosing_weekday">습관형성을 위해 주 3회 이상을 권장 드립니다.</string>
    <string name="period_of_alarm">알람 주기 설정</string>
    <string name="add_time">시간 추가</string>
    <string name="select_character">캐릭터 선택</string>
    <string name="server_client_id">370014456030-ps8oqm93ugrmvqmpujof7cs3a9fl88p0.apps.googleusercontent.com</string>
    <string name="default_notification_channel_id">fcm</string>
    <string name="notification_default_channel_id">alert channel</string>
    <string name="notification_default_channel_name">습관 알림</string>
    <string name="notification_default_channel_description">설정된 습관에 맞춰 알림을 표출한다.</string>
    <string name="put_nickname">닉네임을 제대로 넣어주세요!</string>
    <string name="overlap_nickname">이미 사용중인 닉네임입니다!</string>
    <string name="success_sign_up">회원가입 성공!</string>

    <string name="main_list_title">내 습관 한 번에 보기</string>
    <string name="habit_list_title">내 습관 한번에 보기</string>

    <string name="text_done">해냈습니다!</string>
    <string name="text_later">나중에 다시 와요</string>
    <string name="text_later_short">나중에 와요</string>

    <string name="text_x_count_format">X %d</string>
    <string name="done_total_count_format">%d/%d</string>
    <string name="empty_card_title">습관을 만들어봐요</string>
    <string name="empty_card_message">나랑 새로운 습관을 만들어보자! 쿨..</string>
    <string name="list_empty_message">아직 습관이 없네요!</string>

</resources>